# himacrypt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  next_steps.txt  pyproject.toml
.github/workflows/: ci.yml  run-lint.yml  run-tests.yml
docs/: README.md  api.md  cli.md  contributing.md  faq.md  installation.md  key_provider.md  roadmap.md  security.md  usage.md
himacrypt/: __init__.py  core.py  key_provider.py
himacrypt/cli/: main.py
himacrypt/cli/arguments/: __init__.py  decrypt.py  encrypt.py  keygen.py  lint.py  rotate.py  validate.py
tests/: test_cli_arguments.py  test_cli_encrypt_keys.py  test_cli_rotate.py  test_cli_structured.py  test_crypto_roundtrip.py  test_field_encryption.py  test_key_provider.py  test_rotate.py  test_structured_field_encryption.py  test_toml_field_encryption.py
